new site name details

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,8 +41,8 @@ extra:
       link: https://discord.gg/DYQdxquYwP
 
 
-repo_url: https://github.com/acmbpdc/ml-bootcamp-2023
-repo_name: acmbpdc/ml-bootcamp-2023
+repo_url: https://github.com/acmbpdc/git-guide
+repo_name: acmbpdc/git-guide
 
 copyright: Copyright &copy; 2023 - ACM BITS Pilani Dubai Campus
 
