--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,12 @@
 site_name: Git Guide
 remote_branch: gh-pages
+site_url: https://gitguide.acmbpdc.org
+site_author: ACM BPDC
+site_description: A Detailed Guide for Beginners and Techies to learn all about Git and GitHub in a fun and practical manner.
+repo_url: https://github.com/acmbpdc/git-guide
+repo_name: acmbpdc/git-guide
+
+copyright: Copyright &copy; 2023 - ACM BITS Pilani Dubai Campus
 
 theme:
   name: material
@@ -29,7 +36,6 @@ theme:
     - search.suggest
     - search.highlight
     - header.autohide
-    
 
 extra:
   social:
@@ -39,12 +45,6 @@ extra:
       link: https://github.com/acmbpdc
     - icon: fontawesome/brands/discord
       link: https://discord.gg/DYQdxquYwP
-
-
-repo_url: https://github.com/acmbpdc/git-guide
-repo_name: acmbpdc/git-guide
-
-copyright: Copyright &copy; 2023 - ACM BITS Pilani Dubai Campus
 
 nav:
   - Home: index.md
