--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "cheatsheet",
         "codespace",
         "codespaces",
-        "Customise"
+        "Customise",
+        "unstaged",
+        "visualises"
     ]
 }
