--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -16,12 +16,11 @@ jobs:
       - uses: actions/setup-python@v3
         with:
            python-version: 3.x
-      - run: pip install -r requirements.txt
-      - run: mkdocs gh-deploy
+      - run: pip install -r requirements.txt && mkdocs build
         if: github.event.action != 'closed'
       - uses: rossjrw/pr-preview-action@v1
         with:
-          source-dir: .
+          source-dir: site
           preview-branch: gh-pages
           umbrella-dir: pr-preview
           action: auto
